Add basic rules explanation

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ canvas#canvas { width: 580px; height: 540px; }
 	background-color:#aaa;
 }
 
+h2 {
+ color: white;
+}
+
+.explanation {
+    color: gray;
+    font-family: monospace;
+    font-size: 2em;
+    padding: 2em;
+}
+
 -->
 </STYLE>
     
@@ -122,6 +133,18 @@ canvas#canvas { width: 580px; height: 540px; }
 	<br>	
 
 	</div></center>
+<div class="explanation">
+    <h2>Basic Rules</h2>
+        <ul>
+          <li>Bump to attack/break walls.</li>
+          <li>Level exit is the yellow tile.</li>
+          <li>Your health is the bar at the top right.</li>
+          <li>Your chosen weapon is in top left, toggle with "z" if you have other weapons.</li>
+          <li>Find hearts to replenish health.</li>
+          <li>Find new weapons scattered in later levels.</li>
+          <li>Enemies may take a few hits before they go down.</li>
+        </ul>
+</div>
 	<br><br>
 
 </body></html>
