Changes to rules

--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@ h2 {
 <div class="explanation">
     <h2>Basic Rules</h2>
         <ul>
-          <li>Bump to attack/break walls.</li>
+          <li>Bump to attack/break walls with the pickax.</li>
           <li>Level exit is the yellow tile.</li>
           <li>Your health is the bar at the top right.</li>
-          <li>Your chosen weapon is in top left, toggle with "z" if you have other weapons.</li>
-          <li>Find hearts to replenish health.</li>
+          <li>Your chosen weapon is in top left. Toggle with "z" if you have other weapons.</li>
           <li>Find new weapons scattered in later levels.</li>
+          <li>The pickax deals one damage. Other weapons deal two (but don't break walls).</li>
+          <li>Find hearts to replenish health.</li>
           <li>Enemies may take a few hits before they go down.</li>
         </ul>
 </div>
